--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC|ระบบคุณลักษณะอันพึงประสงค์นักเรียน</title>
+    <link rel="shortcut icon" type="image/png" href="https://img2.pic.in.th/pic/Pakchong_School-removebg-preview.png">
 </head>
 <body>
     <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbwi4QU55C3YA8NEyu4XztO6Yp_GxsAZWLocsMjajP48PJWhARtvp4PYsE-FbMIo9MkWHA/exec" frameborder="0"></iframe>
